--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ navbar-links:
   Publication: "publication/"
   Research: "research/"
   Resources: "resources/"
+  Jobs: "jobs/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
