--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://woo-lab.github.io"
+url: "http://cocoan-lab.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: WooLab
+title: Cocoan Lab
 
 # Short description of your site
-description: "Computational, Cognitive, Affective (CoCoA) Neuroscience Laboratory"
+description: "Computational Cognitive Affective Neuroscience (Cocoan) Laboratory"
 
 # --- Navigation bar options --- #
 
@@ -33,7 +33,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/hot_cocoa.png"
+# avatar: "/img/###.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -64,7 +64,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "woo-lab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "cocoan-lab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
