--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://cocoan-lab.github.io"
+url: "http://cocoanlab.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -64,7 +64,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "cocoan-lab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "cocoanlab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
