--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   email: "choongwan.woo@gmail.com"
   url: "http://wanirepo.github.io"
   github: wanirepo    # eg. daattali
-  twitter: clinpsywoo   # eg. daattali
+  twitter: choongwanwoo   # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
