--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,16 @@ description: "Computational Cognitive Affective Neuroscience Laboratory"
 # List of links in the navigation bar
 navbar-links:
   About: ""
-  News: "news/"
-  People: "people/"
-  Publication: "publication/"
-  Research: "research/"
-  Resources: "resources/"
-  Jobs: "jobs/"
+  News: "news"
+  People: 
+    - Current: "people/current"
+	- Alumni: "people/alumni"
+  Publication: "publication"
+  Research: 
+    - Projects: "research/projects"
+	- Participation: "research/participation"
+  Resources: "resources"
+  Jobs: "jobs"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
