--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: "Computational Cognitive Affective Neuroscience Laboratory"
 navbar-links:
   About: ""
   News: "news"
-    - 2018
-    - 2017
+    - 2018: "news/2018"
+    - 2017: "news/2017"
   People: 
     - Current: "people/current"
     - Alumni: "people/alumni"
