--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ navbar-links:
     - Projects: "research/projects"
     - Codes: "research/codes"
     - Participation: "research/participation"
+  Videos: "videos"
   Resources: "resources"
   Jobs: "jobs"
 
