--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://cocoanlab.github.io"
+url: "http://echo-hydro.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Cocoan lab
+title: Eunsang Cho
 
 # Short description of your site
-description: "Computational Cognitive Affective Neuroscience Laboratory"
+description: "Research website"
 
 # --- Navigation bar options --- #
 
@@ -26,20 +26,13 @@ navbar-links:
   About: ""
   News: 
     - 2020: "news/2020"
-    - 2019: "news/2019"
-    - 2018: "news/2018"
-    - 2017: "news/2017"
-  People: 
-    - Current: "people/current"
-    - Alumni: "people/alumni"
   Publication: "publication"
   Research: 
     - Projects: "research/projects"
     - Codes: "research/codes"
-    - Participation: "research/participation"
-  Videos: "videos/videos"
-  Resources: "resources"
-  Jobs: "jobs"
+    - Data: "research/data"
+  CV: "https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
+
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -54,11 +47,10 @@ navbar-links:
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Choong-Wan Woo
-  email: "choongwan.woo@gmail.com"
-  url: "http://wanirepo.github.io"
-  github: cocoanlab    # eg. daattali
-  twitter: cocoanlab   # eg. daattali
+  name: Eunsang Cho
+  email: "eunsangcho86@gmail.com"
+  github: echo-hydro    # eg. daattali
+  twitter: Eunsang_UNH   # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
@@ -74,7 +66,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "cocoanlab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "echo-hydro.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
