--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
     - Projects: "research/projects"
    # - Codes: "research/codes"
     - Data: "research/data"
-  CV: "https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
+  CV: "/pdfs/CV_EunsangCho_Apr_2020.pdf" #"https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
 
 
 # Image to show in the navigation bar - image must be a square (width = height)
