--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
    # - Codes: "research/codes"
     - Data: "research/data"
   Photo: "photo" 
-  Video: "video" 
+  Video: "videos" 
   CV: "https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
 
 
