--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ navbar-links:
     - Projects: "research/projects"
    # - Codes: "research/codes"
     - Data: "research/data"
-  Photo: "photo" 
-  Video: "videos" 
+  Photos: "photos" 
+  Videos: "videos" 
   CV: "https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
 
 
