--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
     - Projects: "research/projects"
    # - Codes: "research/codes"
     - Data: "research/data"
-  Photos: "photos/photos" 
+  Photo: "photo/photo" 
   Videos: "videos/videos" 
   CV: "https://drive.google.com/file/d/1NpR5zZ7UkJur0pQJS7CVD449IplAWqyh/view?usp=sharing"
 
