--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: "Research website"
 # List of links in the navigation bar
 navbar-links:
   About: ""
-  News: 
-    - 2020: "news/2020"
+  News: "news"
+   # - 2020: "news/2020"
   Publication: "publication"
   Research: 
     - Projects: "research/projects"
