--- a/_config.yml
+++ b/_config.yml
@@ -186,6 +186,6 @@ prose:
 
 gems:
   - jekyll-paginate
-
+plugins: - jekyll-sitemap
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
